@@ -28,11 +28,13 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api </artifactId>
             <version>6.0.1</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>3.27.7</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.lsp4j</groupId>
@@ -113,6 +115,8 @@
                                 <copy file="${project.build.directory}/mira-RELEASE.jar"
                                       tofile="${user.home}/.mira/mira.jar"
                                       overwrite="true"/>
+                                <echo file="${user.home}/.mira/mira.cmd">@echo off
+                                    java --enable-native-access=ALL-UNNAMED -jar "%USERPROFILE%\.mira\mira.jar" %*</echo>
                             </target>
                         </configuration>
                     </execution>
